objects/Mkt_Taxonomy_Hierarchy__c.object
<CustomObject>
    <description>Created as a part of DPS - 18899</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Created as a part of DPS - 18899</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DPS - 18899</description>
        <label>Language Id</label>
        <referenceTo>Mkt_Language_Master__c</referenceTo>
        <relationshipLabel>Taxonomy Hierarchy</relationshipLabel>
        <relationshipName>Taxonomy_Hierarchys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Txnmy_Hierarchy_ID__c</fullName>
        <description>Created as a part of DPS - 18899</description>
        <externalId>true</externalId>
        <label>Taxonomy Hierarchy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Txnmy_L1_Master_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DPS - 18899</description>
        <label>Taxonomy L1 Master Id</label>
        <referenceTo>Mkt_Taxonomy_Master__c</referenceTo>
        <relationshipLabel>Taxonomy Hierarchys</relationshipLabel>
        <relationshipName>Taxonomy_Hierarchys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Txnmy_L2_Is_Primary__c</fullName>
        <description>Created as a part of DPS - 18899</description>
        <label>Taxonomy L2 Is Primary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Txnmy_L2_Master_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DPS - 18899</description>
        <label>Taxonomy L2 Master Id</label>
        <referenceTo>Mkt_Taxonomy_Master__c</referenceTo>
        <relationshipLabel>Taxonomy Hierarchys (Taxonomy L3 Master Id)</relationshipLabel>
        <relationshipName>Taxonomy_Hierarchys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Txnmy_L3_Is_Primary__c</fullName>
        <description>Created as a part of DPS -18899</description>
        <label>Taxonomy L3 Is Primary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Txnmy_L3_Master_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DPS - 18899</description>
        <label>Taxonomy L3 Master Id</label>
        <referenceTo>Mkt_Taxonomy_Master__c</referenceTo>
        <relationshipLabel>Taxonomy Hierarchys (Taxonomy L4 Master Id)</relationshipLabel>
        <relationshipName>Taxonomy_Hierarchys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Txnmy_Status__c</fullName>
        <description>Created as a part of DPS -18899</description>
        <label>Taxonomy Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0 - Active</fullName>
                </value>
                <value>
                    <fullName>1 - Inactive (Paused)</fullName>
                </value>
                <value>
                    <fullName>2 - Inactive (Removed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Taxonomy Hierarchy</label>
    <nameField>
        <label>Taxonomy Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxonomy Hierarchys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>